--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
-body {
-  margin: 0;
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  width: ($cell-size * 7) + ($gap-size * 6);
+  padding: 10px;
+
+  &__day {
+    box-sizing: border-box;
+
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    list-style: none;
+    border: $border-size solid black;
+    transition: all 0.5s;
+
+    &::before {
+      display: block;
+      font-family: Arial, serif;
+      font-size: 30px;
+      line-height: $cell-size - (2 * $border-size);
+      text-align: center;
+    }
+
+    &:hover {
+      background-color: pink;
+      cursor: pointer;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}) {
+        &::before {
+          content: "#{$i}";
+        }
+      }
+    }
+  }
+
+  @each $day, $position in $week-days-position {
+    &--start-day--#{$day}
+
+    &__day:first-child {
+      margin-left: $position * ($cell-size + $gap-size);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length--#{$i}
+
+    &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
