--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,19 +7,35 @@ body {
 }
 
 .container {
-  margin: 20px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   height: 100vh;
+
+  margin: auto;
 }
 
 .calendar {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
   gap: $gap;
 
+  padding: $padding-box;
+
   width: $day-width * 7 + $gap * 6;
-  transition: all $animation-duration ease-in-out;
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  @each $day, $num in $days-of-week {
+    &--start-#{$day} .calendar__day:first-child {
+      margin-left: ($day-width + $gap) * ($num);
+    }
+  }
 
   &__day {
     @include calendar-day;
@@ -31,15 +47,11 @@ body {
 
     &:hover {
       cursor: pointer;
-      transform: translateY(-10%);
+      transform: translateY(-20px);
     }
-  }
-}
 
-@for $i from 1 through $month-length {
-  .calendar__day {
-    &:nth-child(#{$i}) {
-      &::after {
+    @for $i from 1 through $month-length {
+      &:nth-child(#{$i})::before {
         content: "#{$i}";
         font-size: 30px;
       }
