--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,4 +1,3 @@
-
 @mixin calendar-day {
   display: flex;
   align-items: center;
@@ -10,9 +9,5 @@
   border: 1px solid #000;
   background-color: $color-grey;
 
-  // @each $day in $days-of-week {
-  //   .calendar__day--#{$start-day} {
-  //     @include calendar-day;
-  //   }
-  // }
+  transition: all $animation-duration ease-in-out;
 }
