--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,65 +1,3 @@
 @import "variables";
-
-html {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  margin: 0;
-  font-size: $font-size;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  margin: 0 auto;
-  width: $square-size * 7 + 10px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-
-  &__day {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: $square-size;
-    height: $square-size;
-    background-color: #eee;
-    border: 1px solid black;
-    box-sizing: border-box;
-    transition: 0.5s;
-
-    @for $day from 1 through 31 {
-      &:nth-child(#{$day}):before {
-        content: '#{$day}';
-      }
-    }
-
-    &:hover {
-      cursor: pointer;
-      transform: translateY(-20px);
-      background-color: #FFBFCB;
-    }
-  }
-
-  @each $day-of-week, $num in $days-of-week {
-    &--start-day--#{$day-of-week} {
-      .calendar__day:first-child{
-        margin-left: $square-size * ($num - 1) + ($num - 1);
-      }
-    }
-  }
-
-  @for $month from 28 through 31 {
-    $remove-days: 31 - $month;
-
-    &--month-length--#{$month} {
-      .calendar__day:nth-last-child(-n + #{$remove-days}){
-        display: none;
-      }
-    }
-  }
-}
+@import "general";
+@import "calendar";
