--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,77 @@
+$gap: 1;
+$days-of-the-week: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+$font-size: 30px;
+$cell-size: 100px;
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
+.calendar {
+    display: flex;
+    flex-wrap: wrap;
+    width: $cell-size * 7 + $gap * 6;
+    padding: 10px;
+    gap: $gap;
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: $cell-size;
+    min-height: $cell-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+
+    &::before {
+      content: '';
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: $font-size;
+      width: $font-size;
+      height: $font-size;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @for $number from 1 through 31 {
+      &:nth-child(#{$number})::before {
+        content: '#{$number}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      transition: transform 0.5s;
+      transform: translateY(-20px)
+    }
+  }
+
+  &--start-day--sun {
+    margin-left: 0;
+  }
+
+  @each $day, $column in $days-of-the-week {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: ($column - 1) * 100 + ($column - 1) * $gap;
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      .calendar__day:nth-child(n + #{$i + $gap}) {
+        display: none;
+      }
+    }
+  }
+}
+
+
+
