--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,170 @@ body {
   transform: translateY(-20px);
 }
 
+.calendar .calendar__day:nth-child(1)::before {
+  content: "1";
+}
+
+.calendar .calendar__day:nth-child(2)::before {
+  content: "2";
+}
+
+.calendar .calendar__day:nth-child(3)::before {
+  content: "3";
+}
+
+.calendar .calendar__day:nth-child(4)::before {
+  content: "4";
+}
+
+.calendar .calendar__day:nth-child(5)::before {
+  content: "5";
+}
+
+.calendar .calendar__day:nth-child(6)::before {
+  content: "6";
+}
+
+.calendar .calendar__day:nth-child(7)::before {
+  content: "7";
+}
+
+.calendar .calendar__day:nth-child(8)::before {
+  content: "8";
+}
+
+.calendar .calendar__day:nth-child(9)::before {
+  content: "9";
+}
+
+.calendar .calendar__day:nth-child(10)::before {
+  content: "10";
+}
+
+.calendar .calendar__day:nth-child(11)::before {
+  content: "11";
+}
+
+.calendar .calendar__day:nth-child(12)::before {
+  content: "12";
+}
+
+.calendar .calendar__day:nth-child(13)::before {
+  content: "13";
+}
+
+.calendar .calendar__day:nth-child(14)::before {
+  content: "14";
+}
+
+.calendar .calendar__day:nth-child(15)::before {
+  content: "15";
+}
+
+.calendar .calendar__day:nth-child(16)::before {
+  content: "16";
+}
+
+.calendar .calendar__day:nth-child(17)::before {
+  content: "17";
+}
+
+.calendar .calendar__day:nth-child(18)::before {
+  content: "18";
+}
+
+.calendar .calendar__day:nth-child(19)::before {
+  content: "19";
+}
+
+.calendar .calendar__day:nth-child(20)::before {
+  content: "20";
+}
+
+.calendar .calendar__day:nth-child(21)::before {
+  content: "21";
+}
+
+.calendar .calendar__day:nth-child(22)::before {
+  content: "22";
+}
+
+.calendar .calendar__day:nth-child(23)::before {
+  content: "23";
+}
+
+.calendar .calendar__day:nth-child(24)::before {
+  content: "24";
+}
+
+.calendar .calendar__day:nth-child(25)::before {
+  content: "25";
+}
+
+.calendar .calendar__day:nth-child(26)::before {
+  content: "26";
+}
+
+.calendar .calendar__day:nth-child(27)::before {
+  content: "27";
+}
+
+.calendar .calendar__day:nth-child(28)::before {
+  content: "28";
+}
+
+.calendar .calendar__day:nth-child(29)::before {
+  content: "29";
+}
+
+.calendar .calendar__day:nth-child(30)::before {
+  content: "30";
+}
+
+.calendar .calendar__day:nth-child(31)::before {
+  content: "31";
+}
+
+.calendar--month-length--28 .calendar__day:nth-child(29) {
+  display: none;
+}
+
+.calendar--month-length--28 .calendar__day:nth-child(30) {
+  display: none;
+}
+
+.calendar--month-length--28 .calendar__day:nth-child(31) {
+  display: none;
+}
+
+.calendar--month-length--28 .calendar__day:nth-child(32) {
+  display: none;
+}
+
+.calendar--month-length--29 .calendar__day:nth-child(30) {
+  display: none;
+}
+
+.calendar--month-length--29 .calendar__day:nth-child(31) {
+  display: none;
+}
+
+.calendar--month-length--29 .calendar__day:nth-child(32) {
+  display: none;
+}
+
+.calendar--month-length--30 .calendar__day:nth-child(31) {
+  display: none;
+}
+
+.calendar--month-length--30 .calendar__day:nth-child(32) {
+  display: none;
+}
+
+.calendar--month-length--31 .calendar__day:nth-child(32) {
+  display: none;
+}
+
 .calendar--start-day--mon .calendar__day:first-child {
   margin-left: 0;
 }
@@ -52,514 +216,12 @@ body {
   margin-left: 412px;
 }
 
-.calendar--month-length--28 .calendar__day:nth-child(1)::before {
-  content: "1";
+.calendar--start-day--sat .calendar__day:first-child {
+  margin-left: 515px;
 }
 
-.calendar--month-length--28 .calendar__day:nth-child(2)::before {
-  content: "2";
+.calendar--start-day--sun .calendar__day:first-child {
+  margin-left: 618px;
 }
 
-.calendar--month-length--28 .calendar__day:nth-child(3)::before {
-  content: "3";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(4)::before {
-  content: "4";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(5)::before {
-  content: "5";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(6)::before {
-  content: "6";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(7)::before {
-  content: "7";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(8)::before {
-  content: "8";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(9)::before {
-  content: "9";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(10)::before {
-  content: "10";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(11)::before {
-  content: "11";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(12)::before {
-  content: "12";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(13)::before {
-  content: "13";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(14)::before {
-  content: "14";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(15)::before {
-  content: "15";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(16)::before {
-  content: "16";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(17)::before {
-  content: "17";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(18)::before {
-  content: "18";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(19)::before {
-  content: "19";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(20)::before {
-  content: "20";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(21)::before {
-  content: "21";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(22)::before {
-  content: "22";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(23)::before {
-  content: "23";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(24)::before {
-  content: "24";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(25)::before {
-  content: "25";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(26)::before {
-  content: "26";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(27)::before {
-  content: "27";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(28)::before {
-  content: "28";
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(29) {
-  display: none;
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(30) {
-  display: none;
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(31) {
-  display: none;
-}
-
-.calendar--month-length--28 .calendar__day:nth-child(32) {
-  display: none;
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(1)::before {
-  content: "1";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(2)::before {
-  content: "2";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(3)::before {
-  content: "3";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(4)::before {
-  content: "4";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(5)::before {
-  content: "5";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(6)::before {
-  content: "6";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(7)::before {
-  content: "7";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(8)::before {
-  content: "8";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(9)::before {
-  content: "9";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(10)::before {
-  content: "10";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(11)::before {
-  content: "11";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(12)::before {
-  content: "12";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(13)::before {
-  content: "13";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(14)::before {
-  content: "14";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(15)::before {
-  content: "15";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(16)::before {
-  content: "16";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(17)::before {
-  content: "17";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(18)::before {
-  content: "18";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(19)::before {
-  content: "19";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(20)::before {
-  content: "20";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(21)::before {
-  content: "21";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(22)::before {
-  content: "22";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(23)::before {
-  content: "23";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(24)::before {
-  content: "24";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(25)::before {
-  content: "25";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(26)::before {
-  content: "26";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(27)::before {
-  content: "27";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(28)::before {
-  content: "28";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(29)::before {
-  content: "29";
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(30) {
-  display: none;
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(31) {
-  display: none;
-}
-
-.calendar--month-length--29 .calendar__day:nth-child(32) {
-  display: none;
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(1)::before {
-  content: "1";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(2)::before {
-  content: "2";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(3)::before {
-  content: "3";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(4)::before {
-  content: "4";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(5)::before {
-  content: "5";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(6)::before {
-  content: "6";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(7)::before {
-  content: "7";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(8)::before {
-  content: "8";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(9)::before {
-  content: "9";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(10)::before {
-  content: "10";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(11)::before {
-  content: "11";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(12)::before {
-  content: "12";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(13)::before {
-  content: "13";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(14)::before {
-  content: "14";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(15)::before {
-  content: "15";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(16)::before {
-  content: "16";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(17)::before {
-  content: "17";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(18)::before {
-  content: "18";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(19)::before {
-  content: "19";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(20)::before {
-  content: "20";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(21)::before {
-  content: "21";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(22)::before {
-  content: "22";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(23)::before {
-  content: "23";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(24)::before {
-  content: "24";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(25)::before {
-  content: "25";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(26)::before {
-  content: "26";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(27)::before {
-  content: "27";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(28)::before {
-  content: "28";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(29)::before {
-  content: "29";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(30)::before {
-  content: "30";
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(31) {
-  display: none;
-}
-
-.calendar--month-length--30 .calendar__day:nth-child(32) {
-  display: none;
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(1)::before {
-  content: "1";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(2)::before {
-  content: "2";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(3)::before {
-  content: "3";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(4)::before {
-  content: "4";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(5)::before {
-  content: "5";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(6)::before {
-  content: "6";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(7)::before {
-  content: "7";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(8)::before {
-  content: "8";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(9)::before {
-  content: "9";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(10)::before {
-  content: "10";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(11)::before {
-  content: "11";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(12)::before {
-  content: "12";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(13)::before {
-  content: "13";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(14)::before {
-  content: "14";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(15)::before {
-  content: "15";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(16)::before {
-  content: "16";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(17)::before {
-  content: "17";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(18)::before {
-  content: "18";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(19)::before {
-  content: "19";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(20)::before {
-  content: "20";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(21)::before {
-  content: "21";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(22)::before {
-  content: "22";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(23)::before {
-  content: "23";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(24)::before {
-  content: "24";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(25)::before {
-  content: "25";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(26)::before {
-  content: "26";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(27)::before {
-  content: "27";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(28)::before {
-  content: "28";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(29)::before {
-  content: "29";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(30)::before {
-  content: "30";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(31)::before {
-  content: "31";
-}
-
-.calendar--month-length--31 .calendar__day:nth-child(32) {
-  display: none;
-}
+/*# sourceMappingURL=style.css.map */
