--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,62 +16,6 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  &--month-length--28 {
-    @for $numb-day from 1 through 28 {
-      .calendar__day:nth-child(#{$numb-day})::before {
-        content: "#{$numb-day}";
-      }
-    }
-
-    @for $day from 28 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  &--month-length--29 {
-    @for $numb-day from 1 through 29 {
-      .calendar__day:nth-child(#{$numb-day})::before {
-        content: "#{$numb-day}";
-      }
-    }
-
-    @for $day from 29 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  &--month-length--30 {
-    @for $numb-day from 1 through 30 {
-      .calendar__day:nth-child(#{$numb-day})::before {
-        content: "#{$numb-day}";
-      }
-    }
-
-    @for $day from 30 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
-  &--month-length--31 {
-    @for $numb-day from 1 through 31 {
-      .calendar__day:nth-child(#{$numb-day})::before {
-        content: "#{$numb-day}";
-      }
-    }
-
-    @for $day from 31 + 1 through 32 {
-      .calendar__day:nth-child(#{$day}) {
-        display: none;
-      }
-    }
-  }
-
   &__day {
     background-color: #eee;
     width: 100px;
@@ -90,34 +34,49 @@ body {
     transform: translateY(-20px);
   }
   
-  &--start-day--mon {
-    .calendar__day:first-child {
-      margin-left: map.get(val.$days-of-week, "mon");
+  @for $numb-day from 1 through 31 {
+    .calendar__day:nth-child(#{$numb-day})::before {
+      content: "#{$numb-day}";
     }
   }
 
-  &--start-day--tue {
-    .calendar__day:first-child {
-      margin-left: map.get(val.$days-of-week, "tue");
+  &--month-length--28 {
+    @for $day from 28 + 1 through 32 {
+      .calendar__day:nth-child(#{$day}) {
+        display: none;
+      }
     }
   }
 
-  &--start-day--wed {
-    .calendar__day:first-child {
-      margin-left: map.get(val.$days-of-week, "wed");
+  &--month-length--29 {
+    @for $day from 29 + 1 through 32 {
+      .calendar__day:nth-child(#{$day}) {
+        display: none;
+      }
     }
   }
 
-  &--start-day--thu {
-    .calendar__day:first-child {
-      margin-left: map.get(val.$days-of-week, "thu");
+  &--month-length--30 {
+    @for $day from 30 + 1 through 32 {
+      .calendar__day:nth-child(#{$day}) {
+        display: none;
+      }
     }
   }
 
-  &--start-day--fri {
-    .calendar__day:first-child {
-      margin-left: map.get(val.$days-of-week, "fri");
+  &--month-length--31 {
+    @for $day from 31 + 1 through 32 {
+      .calendar__day:nth-child(#{$day}) {
+        display: none;
+      }
     }
   }
 
+  @each $dayName, $dayPosition in val.$days-of-week {
+    &--start-day--#{$dayName} {
+      .calendar__day:first-child {
+        margin-left: $dayPosition;
+      }
+    }
+  }
 }
