--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,48 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
+
+.calendar{
+  width: calc((100*7) + (1*6) + (10*2));
+  border: 1px solid black;
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  margin: auto;
+
+  &__day{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    background-color: #eee;
+    cursor: pointer;
+    transition: transform 0.5s;
+
+    &::before {
+      content: "";
+      font-size: 30px;
+      font-family: Arial;
+    }
+  }
+
+  &__day:hover{
+    background-color: #FFBFCB;
+    transform: translateY(-20px);
+
+  }
+
+  @for $i from 1 through 31 {
+    .calendar__day:nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+}
+
