--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,8 +2,7 @@
   display: flex;
   margin-inline: auto;
   gap: $calendar-gap;
-  max-width: $day-size * 7 + $calendar-padding * 3;
-  padding-inline: $calendar-padding;
+  max-width: $day-size * 7 + $calendar-padding * 2 - 14 * $calendar-gap;
   flex-wrap: wrap;
 
   @each $day-number, $week-day in $week-days {
@@ -21,7 +20,7 @@
     background-color: #eee;
     transition: 0.5s;
 
-    @for $day from 1 to 32 {
+    @for $day from 1 through 31 {
       &:nth-child(#{$day})::before {
         content: '#{$day}';
       }
@@ -34,11 +33,14 @@
     }
   }
 
-  @for $days from 28 to 32 {
+  @for $days from 28 through 31 {
     &--month-length-#{$days} &__day {
       @for $day from $days + 1 to 32 {
         &:nth-child(#{$day}) {
           visibility: hidden;
+          height: 0;
+          width: 0;
+          border: 0;
         }
       }
     }
