--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,6 +5,7 @@
 body {
   @include central;
 
+  margin: 0;
   box-sizing: border-box;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
