--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,12 +7,9 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.calendar__field {
   display: flex;
   flex-wrap: wrap;
-  align-content: space-between;
+  align-content: start;
   width: calc(7 * $cell-width + 6 * $cell-gap);
   padding: 10px;
   gap: $cell-gap;
@@ -20,7 +17,6 @@ body {
 
 .calendar__day {
   background-color: #eee;
-  border: 1px solid black;
   position: relative;
   box-sizing: border-box;
   transition-duration: 0.5s;
@@ -39,6 +35,7 @@ body {
       .calendar__day:nth-child(#{$i}) {
         width: $cell-width;
         height: 100px;
+        border: 1px solid black;
       }
 
       .calendar__day:nth-child(#{$i})::before {
