--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,11 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   gap: $calendar-item-gap;
-  width: ($calendar-item-size * $calendar-columns) + ($calendar-columns - 1) *
-    $calendar-item-gap;
+  width: ($calendar-item-size * $calendar-columns) + ($calendar-columns - 1) * $calendar-item-gap;
   padding: 10px;
 
-  &__item {
+  &__day {
     display: none;
     position: relative;
     background-color: $color-grey;
@@ -33,7 +32,7 @@
 }
 
 @for $i from 1 through 31 {
-  .calendar__item:nth-child(#{$i})::before {
+  .calendar__day:nth-child(#{$i})::before {
     content: '#{$i}';
   }
 }
@@ -49,13 +48,13 @@ $start-days: (
 );
 
 @each $name, $glyph in $start-days {
-  .calendar--start-day--#{$name} .calendar__item:first-child {
+  .calendar--start-day-#{$name} .calendar__day:first-child {
     margin-left: ($calendar-item-size + $calendar-item-gap) * $glyph;
   }
 }
 
 @for $k from 1 through 31 {
-  .calendar--month-length--#{$k} .calendar__item:nth-child(-n + #{$k}) {
+  .calendar--month-length-#{$k} .calendar__day:nth-child(-n + #{$k}) {
     display: block;
   }
 }
